<resources>
    <string name="app_name">FoodTracker</string>
    <string name="button_continue">Continue</string>
    <string name="hint_brand">Brand/ Manufacturer</string>
    <string name="hint_productName">Product Name</string>
    <string name="hint_productCategory">Product Category</string>
    <string name="hint_barcode">Barcode</string>
    <string name="hint_servingSize">Serving Size</string>
    <string name="hint_calories">Calories</string>
    <string name="hint_fat">Fat</string>
    <string name="hint_carbs">Carbs</string>
    <string name="hint_protein">Protein</string>
    <string name="button_create">Create</string>
    <string name="github_token">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</string>
    <string name="menu_createFood">Create</string>
    <string name="menu_cancelFood">Cancel</string>
    <string name="enter_food_information">Please enter at least the brand and the product name</string>
    <string name="enter_nutritional_information">Please enter the required information</string>
    <string name="hint_date">Today</string>
    <string name="hint_breakfast">Breakfast</string>
    <string name="hint_lunch">Lunch</string>
    <string name="hint_dinner">Dinner</string>
    <string name="hint_snacks">Snacks</string>
    <string name="hint_caloriesAmount">"0"</string>
    <string name="default_web_client_auth_id">1040330250217-50o0gq96734gabocrkvaor5l60goboh2.apps.googleusercontent.com</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>