<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="oth.wit.kapk_project.activities.NutritionalValuesActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarCreate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/servingSize"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:autofillHints="hint"
                        android:hint="@string/hint_servingSize"
                        android:inputType="number"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textSize="14sp" />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center" />
                </LinearLayout>

                <EditText
                    android:id="@+id/calories"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints="hint"
                    android:hint="@string/hint_calories"
                    android:inputType="number"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/fat"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints="hint"
                    android:hint="@string/hint_fat"
                    android:inputType="number"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/carbs"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints="hint"
                    android:hint="@string/hint_carbs"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="14sp"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/protein"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints="hint"
                    android:hint="@string/hint_protein"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="14sp"
                    android:inputType="number" />

                <Button
                    android:id="@+id/btnCreate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_create"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
