<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="oth.wit.kapk_project.activities.FoodCreateActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/brand"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints="hint"
                    android:hint="@string/hint_brand"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/productName"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints="hint"
                    android:hint="@string/hint_productName"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/productCategory"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:autofillHints="hint"
                        android:hint="@string/hint_productCategory"
                        android:inputType="text"
                        android:maxLength="25"
                        android:padding="8dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14sp" />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/barcodeTextView"
                        android:layout_width="80dp"
                        android:layout_height="45dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:autofillHints="hint"
                        android:hint="@string/hint_barcode"
                        android:inputType="text"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:padding="8dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/buttonScan"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Scan" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnContinue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_margin="16dp"
                    android:background="@color/colorAccent"
                    android:gravity="bottom|center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_continue"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

