<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="oth.wit.kapk_project.activities.MainMenuActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:fitsSystemWindows="true"
                app:elevation="0dip"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbarOverview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:titleTextColor="@color/colorPrimary" />

            </com.google.android.material.appbar.AppBarLayout>


                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/appBarLayout"
                    android:fillViewport="true">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="100dp">

                            <TextView
                                android:id="@+id/caloriesText"
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:layout_weight="1"
                                android:gravity="start"
                                android:text="@string/hint_calories"
                                android:textSize="24sp" />

                            <ProgressBar
                                android:id="@+id/caloriesProgressBar"
                                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                                android:layout_width="wrap_content"
                                android:layout_height="100dp"
                                android:max="2000"
                                android:padding="5dp"
                                android:progressTint="#4CAF50"
                                android:scaleY="10"
                                android:secondaryProgressTint="#F60404" />

                            <TextView
                                android:id="@+id/caloriesTextView"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:text="@string/hint_caloriesAmount"
                                android:textSize="24sp" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/carbsText"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                android:padding="8dp"
                                android:text="@string/hint_carbs" />

                            <TextView
                                android:id="@+id/proteinText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                android:padding="8dp"
                                android:text="@string/hint_protein" />

                            <TextView
                                android:id="@+id/fatText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                android:padding="8dp"
                                android:text="@string/hint_fat" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp">

                            <TextView
                                android:id="@+id/carbsTextNumber"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ems="10"
                                android:gravity="center_horizontal"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/proteinTextNumber"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ems="10"
                                android:gravity="center_horizontal"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/fatTextNumber"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ems="10"
                                android:gravity="center_horizontal"
                                android:textSize="16sp" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ProgressBar
                                android:id="@+id/carbsProgressBar"
                                style="?android:attr/progressBarStyleHorizontal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                android:max="260"
                                android:padding="8dp"
                                android:progressTint="#4CAF50"
                                android:scaleY="2" />

                            <ProgressBar
                                android:id="@+id/proteinProgressBar"
                                style="?android:attr/progressBarStyleHorizontal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                android:max="50"
                                android:padding="8dp"
                                android:progressTint="#4CAF50"
                                android:scaleY="2" />

                            <ProgressBar
                                android:id="@+id/fatProgressBar"
                                style="?android:attr/progressBarStyleHorizontal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                android:max="70"
                                android:padding="8dp"
                                android:progressTint="#4CAF50"
                                android:scaleY="2" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <Space
                                android:layout_width="wrap_content"
                                android:layout_height="60dp"
                                android:layout_weight="1"
                                android:gravity="center_horizontal" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/breakfastTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                android:text="@string/hint_breakfast" />

                            <TextView
                                android:id="@+id/lunchTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                android:text="@string/hint_lunch" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageButton
                                android:id="@+id/breakfastButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                app:srcCompat="@android:drawable/ic_menu_add" />

                            <ImageButton
                                android:id="@+id/lunchButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                app:srcCompat="@android:drawable/ic_menu_add" />

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/dinnerTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                android:text="@string/hint_dinner" />

                            <TextView
                                android:id="@+id/snacksTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                android:text="@string/hint_snacks" />
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageButton
                                android:id="@+id/dinnerButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                app:srcCompat="@android:drawable/ic_menu_add" />

                            <ImageButton
                                android:id="@+id/snacksButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center_horizontal"
                                app:srcCompat="@android:drawable/ic_menu_add" />

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingTop="40dp"/>
                    </TableLayout>
                </ScrollView>


        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>

